# nyumaya_audio_recognition

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  changelog  feature_extraction.py  feature_test.py  recognition.py  streaming_example.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  test-multi-platform.yml
cpp/: CMakeLists.txt  arecord_sample.cpp  dummy_sample.cpp
examples/android/: README.md  build.gradle  gradle.properties  settings.gradle
examples/cpp/: CMakeLists.txt  README.md  arecord_sample.cpp  dummy_sample.cpp
examples/python/: README.md  multi_streaming_example.py  network_client.py  network_server.py  record_activations.py  simple_hotword.py  speech_features.py  vosk_with_keyword.py
examples/wasm/: README.md  hotword_demo.html  lib  mic.js  nyumaya.css  nyumaya_premium.js-2.3.0  server.py
include/: libnyumaya.h  nyumaya_lib.h
lib/linux_x86_64/: libnyumaya_premium.so.1.0.0  libnyumaya_premium.so.1.2.0  libnyumaya_premium.so.2.0.0  libnyumaya_premium.so.2.2.0
lib/mac/: libnyumaya.dylib
lib/wasm/: libnyumaya-bin.js  libnyumaya-bin.wasm  libnyumaya-nosimd-bin.js  libnyumaya-nosimd-bin.wasm  nyumaya_premium.js  nyumaya_premium.js-3.0.0  (+3 more)
lite/: CMakeLists.txt  README.md  dummy_sample.cpp
python/: check_audio.py  cross_record.py  feature_extraction.py  libnyumaya.py  light_switch.py  multi_detector.py  multi_streaming_example.py  network_client.py  network_server.py  record.py  sonoff_switch.py  speaker_verification.py  streaming_example.py  test_accuracy.py  test_feature_extractor.py  test_mini.sh
tf_python/: README.md  feature_extraction.py  feature_test.py  multi_streaming_example.py  recognition.py
(+187 files in other folders)
